<resources>
    <string name="app_name">CurriculumVitae</string>
    <string name="fullname">Fullname</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="skills">Skills</string>
    <string name="android">ANDROID</string>
    <string name="ios">IOS</string>
    <string name="profileimage">ProfileImage</string>
    <string name="flutter">Flutter</string>
</resources>